Authentication Controller ajustado/documentado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.format-sql=true
 
 jwt.secret=1234
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true   
+springdoc.swagger-ui.path=/swagger-ui.html
